--- a/SLNWEB.UI/Views/Order/SatisYap.cshtml
+++ b/SLNWEB.UI/Views/Order/SatisYap.cshtml
@@ -17,8 +17,7 @@
                     <h5>Catagory</h5>
                 </div>
                 <div class="col-md-3">
-                    @*@Html.DropDownList("Catagories","Seçiniz")*@   @*bunu ViewBagOlarak Yollayalım*@
-
+                    @*@Html.DropDownList("Catagories","Seçiniz")*@ 
                 </div>
 
             </div>
