--- a/SLNWEB.UI/Views/Order/SatisYap.cshtml
+++ b/SLNWEB.UI/Views/Order/SatisYap.cshtml
@@ -17,7 +17,7 @@
                     <h5>Catagory</h5>
                 </div>
                 <div class="col-md-3">
-                    @*@Html.DropDownList("Catagories","Seçiniz")*@ 
+                    @Html.DropDownList("Catagories","Seçiniz")
                 </div>
 
             </div>
