--- a/SLNWEB.UI/Views/Rapor/Index.cshtml
+++ b/SLNWEB.UI/Views/Rapor/Index.cshtml
@@ -4,4 +4,55 @@
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container-fluid px-4">
+    <h2 class="mt-4">Raporlama</h2>
+
+    <div class="card mb-4">
+        <div class="card-body">
+
+        </div>
+    </div>
+    <div class="card mb-4">
+        <div class="card-header">
+        </div>
+        <div class="card-body">
+            <table id="datatablesSimple">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Customer</th>
+                        <th>Year</th>
+                        <th>Product</th>
+                        <th>Total Price</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th></th>
+                        <th>Customer</th>
+                        <th>Year</th>
+                        <th>Product</th>
+                        <th>Total Price</th>
+                        <th></th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    @*@foreach (var item in collection)
+                        {
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        }*@
+
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
