customer demographics fix

--- a/SLNWEB.UI/Views/CustomerDemographics/Add.cshtml
+++ b/SLNWEB.UI/Views/CustomerDemographics/Add.cshtml
@@ -17,7 +17,7 @@
 <body>
     <div>
 
-        @using (Html.BeginForm("Add", "CustomerDemographic", FormMethod.Post))
+        @using (Html.BeginForm("Add", "CustomerDemographics", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
             <div>
