customer demographic delete

--- a/SLNWEB.UI/Views/CustomerDemographics/Delete.cshtml
+++ b/SLNWEB.UI/Views/CustomerDemographics/Delete.cshtml
@@ -25,10 +25,9 @@
 
                 CustomerDemoTypeID:@Html.EditorFor(a => a.CustomerTypeID)
                 <br />
-                CustomerDescription:@Html.EditorFor(a => a.CustomerDesc)
             </div>
 
-            <input type="submit" name="name" value="Add Customer Demographic" />
+            <input type="submit" name="name" value="Delete Customer Demographic" />
         }
 
     </div>
