--- a/SLNWEB.UI/Views/Customer/Index.cshtml
+++ b/SLNWEB.UI/Views/Customer/Index.cshtml
@@ -14,20 +14,40 @@
 </head>
 <body>
     <div>
-
-        <table class="table">
+        <table class="col-md-12 table table-bordered table-responsive" >
             <thead>
                 <tr>
+                    <th>CustomerID</th>
+                    <th>CompanyName</th>
+                    <th>ContactName</th>
+                    <th>ContactTitle</th>
+                    <th>Address</th>
+                    <th>City</th>
+                    <th>Region</th>
+                    <th>PostalCode</th>
+                    <th>Country</th>
+                    <th>Phone</th>
+                    <th>Fax</th>
                 </tr>
             </thead>
             <tbody>
+
                 @foreach (var item in Model)
                 {
                 <tr>
                     <td>@item.CustomerID</td>
-                    <td>@item.ContactName</td>
                     <td>@item.CompanyName</td>
+                    <td>@item.ContactName</td>
+                    <td>@item.ContactTitle</td>
+                    <td>@item.Address</td>
                     <td>@item.City</td>
+                    <td>@item.Region</td>
+                    <td>@item.PostalCode</td>
+                    <td>@item.Country</td>
+                    <td>@item.Phone</td>
+                    <td>@item.Fax</td>
+                    <td><a href="/Customer/Delete/@item.CustomerID" class="btn btn-outline-warning">Delete</a></td>
+                    <td><a href="/Customer/Update/@item.CustomerID" class="btn btn-outline-warning">Update</a></td>
                 </tr>
                 }
 
