--- a/SLNWEB.UI/Views/Rapor/Index.cshtml
+++ b/SLNWEB.UI/Views/Rapor/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
+@*@model SLNWEB.DAO.VM.RaporVM*@
 
 <div class="container-fluid px-4">
     <h2 class="mt-4">Raporlama</h2>
