--- a/SLNWEB.UI/Views/Rapor/Index.cshtml
+++ b/SLNWEB.UI/Views/Rapor/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
-@*@model SLNWEB.DAO.VM.RaporVM*@
+@model SLNWEB.DAO.VM.RaporVM
 
 <div class="container-fluid px-4">
     <h2 class="mt-4">Raporlama</h2>
@@ -15,7 +15,7 @@
                     <h5>Customer</h5>
                 </div>
                 <div class="col-md-3">
-                    @*@Html.DropDownList("Customer", "Seçiniz")*@
+                    @Html.DropDownListFor(a => a.Customer.CustomerID, Model.Customers, "Seçiniz",null)
                 </div>
             </div>
             <br />
@@ -24,7 +24,7 @@
                     <h5>Year</h5>
                 </div>
                 <div class="col-md-3">
-                    @*@Html.DropDownList("Year", "Seçiniz")*@
+                    @Html.TextBoxFor(a => a.Year)
                 </div>
             </div>
             <br />
@@ -42,8 +42,8 @@
                     <tr>
                         <th>Customer</th>
                         <th>Year</th>
-                        <th>Total</th>
-                        <th>Total Price</th>
+                        <th>Price</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -51,7 +51,7 @@
                         <th>Customer</th>
                         <th>Year</th>
                         <th>Total</th>
-                        <th>Total Price</th>
+                        <th></th>
                     </tr>
                 </tfoot>
                 <tbody>
@@ -68,23 +68,23 @@
 </div>
 <script>
     function Listele() {
-        //var xhr = new XMLHttpRequest();
-        //xhr.open("GET", "Rapor/RaporGetir", true);
-        //xhr.send();
-        //xhr.onreadystatechange = function () {
+        var xhr = new XMLHttpRequest();
+        xhr.open("GET", "Rapor/RaporGetir", true);
+        xhr.send();
+        xhr.onreadystatechange = function () {
 
-        //    var tbody = document.getElementById("datatablesSimple").querySelector("tbody");
+            var tbody = document.getElementById("datatablesSimple").querySelector("tbody");
 
-        //    tbody.innerHTML = "";
-        //    if (this.readyState == 4 && this.status == 200) {
+            tbody.innerHTML = "";
+            if (this.readyState == 4 && this.status == 200) {
 
-        //        JSON.parse(this.responseText).forEach(function (data, index) {
-        //            tbody.innerHTML += "<tr><td>Customer</td><td>Year</td><td>Total</td><td>Total Pric</td></tr>"
+                JSON.parse(this.responseText).forEach(function (data, index) {
+                    tbody.innerHTML += "<tr><td>" + data.Customer.CustomerID + "</td><td>" + data.Year + "</td><td>" + data.Price +"</td><td> - </td></tr>"
 
-        //        });
-        //    }
+                });
+            }
 
-        //}
+        }
     }
 
 </script>
