--- a/SLNWEB.UI/Views/Order/SatisYap.cshtml
+++ b/SLNWEB.UI/Views/Order/SatisYap.cshtml
@@ -33,8 +33,8 @@
                         <h5>Catagory</h5>
                     </div>
                     <div class="col-md-3">
-                        @Html.DropDownList("Catagories","Seçiniz")
-                        @*@Html.DropDownListFor(a=>a.Catagory.CategoryID,Model.Categories, "Seçiniz", new { @id = "catagoryID" })*@
+                        @*@Html.DropDownList("Categories","Seçiniz")*@
+                        @Html.DropDownListFor(a=>a.Catagory.CategoryID,Model.Categories, "Seçiniz", new { @id = "catagoryID" })
                     </div>
 
                 </div>
