--- a/SLNWEB.UI/Views/Order/SatisYap.cshtml
+++ b/SLNWEB.UI/Views/Order/SatisYap.cshtml
@@ -147,12 +147,12 @@
             });
 
         });*@
-        $("#setText").click(function (event) {
-            var quantity = $('#quantityID').val();
-            var price = $('#priceID').val();
-            var total = quantity * price;
-            document.getElementById("totalPriceID").innerHTML = total + " TL";
-        });
+        //$("#setText").click(function (event) {
+        //    var quantity = $('#quantityID').val();
+        //    var price = $('#priceID').val();
+        //    var total = quantity * price;
+        //    document.getElementById("totalPriceID").innerHTML = total + " TL";
+        //});
 
 
     });
