--- a/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
+++ b/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
@@ -42,11 +42,11 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <a class="nav-link" href="~/Order/Index">
+                        <a class="nav-link" href="@Url.Action("Index", "Rapor")">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Raporlama
                         </a>
-                        <a class="nav-link " href="SatisYap">
+                        <a class="nav-link " href="@Url.Action("SatisYap", "Order")" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             Satış İşlemleri
                         </a>
