--- a/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
+++ b/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
@@ -46,7 +46,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Raporlama
                         </a>
-                        <a class="nav-link " href="@Url.Action("SatisYap", "Order")" target="_blank">
+                        <a class="nav-link " href="@Url.Action("SatisYap", "Order")">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             Satış İşlemleri
                         </a>
