--- a/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
+++ b/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
@@ -50,6 +50,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             Satış İşlemleri
                         </a>
+                        <a class="nav-link " href="@Url.Action("Listeleme", "Customer")">
+                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                           Müşteri Listele
+                        </a>
                     </div>
                 </div>
             </nav>
