--- a/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
+++ b/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
@@ -52,7 +52,11 @@
                         </a>
                         <a class="nav-link " href="@Url.Action("Listeleme", "Customer")">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                           Müşteri Listele
+                            Müşteri Listele
+                        </a>
+                        <a class="nav-link " href="@Url.Action("Add", "Customer")">
+                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            Müşteri Ekleme
                         </a>
                     </div>
                 </div>
