--- a/SLNWEB.UI/Views/Customer/Listeleme.cshtml
+++ b/SLNWEB.UI/Views/Customer/Listeleme.cshtml
@@ -8,7 +8,9 @@
 
 <div class="container-fluid px-4">
     <h2 class="mt-4">Customer Listele</h2>
-
+    <br />
+    <a href="/Customer/Add" class="btn btn-secondary">Yeni Müşteri Ekle</a>
+    <br />
     <div class="card mb-4">
         <div class="card-header">
         </div>
@@ -59,9 +61,9 @@
                             </td>
                             <td>
                                 @*<button type="button" class="btn btn-warning" data-toggle="modal" data-target="@Url.Action("_UpdateCustomer","Customer",new { CustomerID = item.CustomerID  })">
-                                    Düzenle
-                                </button>*@
-                                <a href="/Customer/Update/@item.CustomerID" class="btn btn-outline-warning">Update</a>
+                                        Düzenle
+                                    </button>*@
+                                <a href="/Customer/Update/@item.CustomerID" class="btn btn-warning">Update</a>
                             </td>
                         </tr>
                     }
