--- a/SLNWEB.UI/Views/Rapor/Index.cshtml
+++ b/SLNWEB.UI/Views/Rapor/Index.cshtml
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-md-3">
                     @*@Html.DropDownListFor(a => a.Year, Model.Years, "Seçiniz", null)*@
-                    @Html.DropDownList("Year", new SelectList(Year),new { @id= "year" })
+                    @Html.DropDownList("Year", new SelectList(Year), new { @id = "year" })
                 </div>
             </div>
             <br />
@@ -74,28 +74,28 @@
 <script src="~/Scripts/jquery-3.6.0.js"></script>
 <script>
     function Listele() {
-        debugger;
+
         let cus = $('select#customerID option:selected').val();
         let year = $('select#year option:selected').val();
-        let data = new FormData();
-        data.append('customerID', cus );
-        data.append('year', year);
+        let datapost = new FormData();
+        datapost.append('customerID', cus);
+        datapost.append('year', year);
 
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/Rapor/RaporGetir", true);
-        xhr.send(data);
+        xhr.send(datapost);
         xhr.onreadystatechange = function () {
 
             var tbody = document.getElementById("datatablesSimple").querySelector("tbody");
 
             tbody.innerHTML = "";
-            if (this.readyState == 4 && this.status == 200) {
 
-                JSON.parse(this.responseText).forEach(function (data, index) {
-                    tbody.innerHTML += "<tr><td>" + data.CustomerName + "</td><td>" + data.Count + "</td><td>" + data.Price + "</td><td> " + data.OrderDate+" </td></tr>"
+            JSON.parse(this.responseText).forEach(function (data, index) {
 
-                });
-            }
+                tbody.innerHTML += "<tr><td>" + data.CustomerName + "</td><td>" + data.Count + "</td><td>" + data.Price + "</td><td> " + data.OrderDate + " </td></tr>"
+
+            });
+
 
         }
     }
