--- a/SLNWEB.UI/Views/Rapor/Index.cshtml
+++ b/SLNWEB.UI/Views/Rapor/Index.cshtml
@@ -5,100 +5,114 @@
 }
 @{
     List<int> Year = (List<int>)ViewBag.Year;
-
+    int c = 0;
 }
-@model SLNWEB.DAO.VM.RaporVM
+@using SLNWEB.DAO.VM
+@model RaporVM
 
 <div class="container-fluid px-4">
-    <h2 class="mt-4">Raporlama</h2>
+    <h2 class="mt-4">Satş Raporu</h2>
 
-    <div class="card mb-4">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-3">
-                    <h5>Customer</h5>
+    @using (Html.BeginForm("CustomerSatisRapor", "Rapor", FormMethod.Post))
+    {
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h5>Customer</h5>
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DropDownListFor(a => a.Customer.CustomerID, Model.Customers, "Seçiniz", new { @id = "customerID" })
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    @Html.DropDownListFor(a => a.Customer.CustomerID, Model.Customers, "Seçiniz", new { @id = "customerID" })
+                <br />
+                @*<div class="row">
+                        <div class="col-md-3">
+                            <h5>Year</h5>
+                        </div>
+                        <div class="col-md-3">
+                            @Html.DropDownList("Year", new SelectList(Year), new { @id = "year" })
+                        </div>
+                    </div>*@
+                <br />
+                <div class="row">
+                    <input type="submit" name="name" class="btn btn-outline-primary" value="Listele" style=" width: 100%;" />
                 </div>
-            </div>
-            <br />
-            <div class="row">
-                <div class="col-md-3">
-                    <h5>Year</h5>
-                </div>
-                <div class="col-md-3">
-                    @*@Html.DropDownListFor(a => a.Year, Model.Years, "Seçiniz", null)*@
-                    @Html.DropDownList("Year", new SelectList(Year), new { @id = "year" })
-                </div>
-            </div>
-            <br />
-            <div class="row">
-                <input type="button" class="btn btn-outline-secondary" value="Listele" onclick="Listele()" />
             </div>
         </div>
-    </div>
-    <div class="card mb-4">
-        <div class="card-header">
-        </div>
-        <div class="card-body">
-            <table id="datatablesSimple">
-                <thead>
-                    <tr>
-                        <th>Customer</th>
-                        <th>Year</th>
-                        <th>Price</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <th>Customer</th>
-                        <th>Year</th>
-                        <th>Total</th>
-                        <th></th>
-                    </tr>
-                </tfoot>
-                <tbody>
-                    @*@foreach (var item in collection)
+        <div class="card mb-4">
+            <div class="card-header">
+            </div>
+            <div class="card-body">
+                <table id="datatablesSimple">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Customer Name</th>
+                            <th>Order Date</th>
+                            <th>Price</th>
+                            
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th></th>
+                            <th>Customer Name</th>
+                            <th>Order Date</th>
+                            <th>Price</th>
+                    
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        @foreach (var item in Model.Report)
                         {
-                            <tr><td>Customer</td><td>Year</td><td>Total</td><td>Total Pric</td></tr>
-                        }*@
+                        <tr>
+                            <th></th>
+                            <td>@item.CustomerName</td>
+                            <td>@item.OrderDate</td>
+                            <td>@item.Price</td>
+
+                        </tr>
+                           
+                        }
 
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
+    }
 </div>
 <script src="~/Scripts/jquery-3.6.0.js"></script>
 <script>
-    function Listele() {
+    //function Listele() {
 
-        let cus = $('select#customerID option:selected').val();
-        let year = $('select#year option:selected').val();
-        let datapost = new FormData();
-        datapost.append('customerID', cus);
-        datapost.append('year', year);
+    //    let cus = $('select#customerID option:selected').val();
+    //    let year = $('select#year option:selected').val();
+    //    let datapost = new FormData();
+    //    datapost.append('customerID', cus);
+    //    datapost.append('year', year);
 
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", "/Rapor/RaporGetir", true);
-        xhr.send(datapost);
-        xhr.onreadystatechange = function () {
+    //    var xhr = new XMLHttpRequest();
+    //    xhr.open("POST", "/Rapor/RaporGetir", true);
+    //    xhr.send(datapost);
+    //    xhr.onreadystatechange = function () {
 
-            var tbody = document.getElementById("datatablesSimple").querySelector("tbody");
+    //        var tbody = document.getElementById("datatablesSimple").querySelector("tbody");
 
-            tbody.innerHTML = "";
+    //        tbody.innerHTML = "";
 
-            JSON.parse(this.responseText).forEach(function (data, index) {
+    //        JSON.parse(responseText).forEach(function (data, index) {
 
-                tbody.innerHTML += "<tr><td>" + data.CustomerName + "</td><td>" + data.Count + "</td><td>" + data.Price + "</td><td> " + data.OrderDate + " </td></tr>"
+    //        /*    tbody.innerHTML += "<tr><td>" + data.CustomerName + "</td><td>" + data.Count + "</td><td>" + data.Price + "</td><td> " + data.OrderDate + " </td></tr>"*/
 
-            });
+    //            tbody.innerHTML += "<tr><td>" + data.CustomerName + "</td><td>" + data.Count + "</td><td>" + data.Price + "</td><td>" + data.OrderDate + "</td><td></td></tr>"
+
+    //        });
 
 
-        }
-    }
+    //    }
+    //}
 
 
 
