--- a/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
+++ b/SLNWEB.UI/Views/Shared/_LayoutPage.cshtml
@@ -44,7 +44,11 @@
                     <div class="nav">
                         <a class="nav-link" href="@Url.Action("Index", "Rapor")">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Raporlama
+                            Satış Raporlama
+                        </a>
+                        <a class="nav-link" href="@Url.Action("CustomerRapor", "Rapor")">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Top 5 Müşteri Raporlama
                         </a>
                         <a class="nav-link " href="@Url.Action("SatisYap", "Order")">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
